--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,7 +2,11 @@
   "dependencies": {
     "com.unity.feature.development": "1.0.2",
     "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.multiplayer.playmode": "1.6.2",
+    "com.unity.services.multiplayer": "1.0.0",
     "com.unity.ugui": "2.0.0",
+    "com.wekid.core": "file:D:/unity/WekidCore/com.wekid.core",
+    "io.colyseus.sdk": "https://github.com/colyseus/colyseus-unity3d.git#upm",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
